@@ -37,5 +37,5 @@ public:
 
     virtual bool Intersect(HitResult& hit, const Ray& ray, const float& maxDist) = 0;
     virtual Color GetColor() = 0;
-    virtual Ray ScatterRay(Ray ray, vec3 point, vec3 normal) = 0;
+    virtual Ray ScatterRay(const Ray& ray, const vec3& point, const vec3& normal) = 0;
 };
